# the-project

./: README.md  docker-compose.yaml  import_words.py  pyproject.toml
api/: elasticsearch.py  main.py
app/: __init__.py  deps.py  main.py  settings.py
app/models/: words.py
app/repositories/: base.py  elasticsearch.py
app/routers/: anagrams.py  index.py  words.py
app/services/: words.py
app/word_processors/: base.py  nltk.py
docker/: Dockerfile
